--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,32 +124,57 @@ services:
       retries: 5
     profiles: ["back"]
 
-    user-service:
-      build:
-        context: ./user-service
-        dockerfile: ../Dockerfile-back
-      container_name: user-service
-      environment:
-        - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
-        - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/user_db
-        - SPRING_DATASOURCE_USERNAME=user_user
-        - SPRING_DATASOURCE_PASSWORD=userpass
-        - SERVER_FORWARD_HEADERS_STRATEGY=native
-      ports:
-        - "8083:8083"
-      depends_on:
-        postgres:
-          condition: service_healthy
-        eureka-server:
-          condition: service_healthy
-      networks:
-        - micro_net
-      healthcheck:
-        test: [ "CMD-SHELL", "curl -sf http://localhost:8083/actuator/health || exit 1" ]
-        interval: 10s
-        timeout: 5s
-        retries: 5
-      profiles: [ "back" ]
+  user-service:
+    build:
+      context: ./user-service
+      dockerfile: ../Dockerfile-back
+    container_name: user-service
+    environment:
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/user_db
+      - SPRING_DATASOURCE_USERNAME=admin
+      - SPRING_DATASOURCE_PASSWORD=admin
+      - SERVER_FORWARD_HEADERS_STRATEGY=native
+    ports:
+      - "8083:8083"
+    depends_on:
+      postgres:
+        condition: service_healthy
+      eureka-server:
+        condition: service_healthy
+    networks:
+      - micro_net
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -sf http://localhost:8083/actuator/health || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    profiles: [ "back" ]
+
+  user-directory-service:
+    build:
+      context: ./user-directory-service
+      dockerfile: ../Dockerfile-back
+    container_name: user-directory-service
+    environment:
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
+      - SERVER_FORWARD_HEADERS_STRATEGY=native
+    ports:
+      - "8084:8084"
+    depends_on:
+      eureka-server:
+        condition: service_healthy
+      user-service:
+        condition: service_healthy
+    networks:
+      - micro_net
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -sf http://localhost:8084/actuator/health || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    profiles: [ "back" ]
+
 
 volumes:
   postgres_data:
