--- a/questforge/package.json
+++ b/questforge/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^2.1.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/joy": "^5.0.0-beta.52",
+    "@mui/material": "^7.3.4",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "@tanstack/react-query": "^5.90.2",
     "next": "15.5.4",
     "overlayscrollbars": "^2.12.0",
     "overlayscrollbars-react": "^0.5.6",
@@ -23,6 +29,8 @@
     "react": "19.1.0",
     "react-custom-scroller": "^2.2.0",
     "react-dom": "19.1.0",
+    "sass": "^1.93.2",
+    "sweetalert2": "^11.26.0",
     "three": "^0.180.0",
     "two.js": "^0.8.21"
   },
