--- a/login-service/src/main/resources/application.properties
+++ b/login-service/src/main/resources/application.properties
@@ -9,3 +9,6 @@ eureka.instance.lease-expiration-duration-in-seconds=30
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 management.endpoint.gateway.enabled=true
+
+logging.level.es.javiapps.login=DEBUG
+spring.output.ansi.enabled=ALWAYS
