--- a/questforge/package.json
+++ b/questforge/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^2.1.1",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
@@ -21,14 +22,17 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
     "@tanstack/react-query": "^5.90.2",
+    "framer-motion": "^12.23.24",
     "next": "15.5.4",
     "overlayscrollbars": "^2.12.0",
     "overlayscrollbars-react": "^0.5.6",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
     "react": "19.1.0",
+    "react-chatbotify": "^2.4.0",
     "react-custom-scroller": "^2.2.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "sass": "^1.93.2",
     "sweetalert2": "^11.26.0",
     "three": "^0.180.0",
